fixed some spacing issues and started setting up data to be transferred to the db

--- a/el-sistema-app/src/components/admin-side/components/Media/style.css
+++ b/el-sistema-app/src/components/admin-side/components/Media/style.css
@@ -76,3 +76,14 @@ margin-top: 100%;
     background-color: white;
     font-weight: bold;
 }
+
+.media-description-textarea{
+    font-size: 19px;
+    border: none;
+    width: 85%;
+    max-width: 800px;
+    outline: none;
+    resize: none;
+    height: 100px;
+    border-bottom: 1px solid gray;
+}
